# EASTR

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  Troubleshooting.md  analyze_results_introns.py  gffcompare_indiv.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  pre-commit.yml  run_tests.yml
EASTR/: __init__.py  alignment_utils.py  extract_junctions.py  filter_bam.py  get_spurious_introns.py  junctions_from_gtf.py  output_utils.py  run_eastr.py  utils.py
EASTR/helpers/: args.py
EASTR/tests/data/: chrX.fa.fai
docs/: index.md  settings.md
docs/plugins/: main.py
src/EASTR/: __init__.py  alignment_utils.py  run_eastr.py  utils.py
src/eastr/: alignment_utils.py  extract_junctions.py  get_spurious_introns.py  output_utils.py  output_utils_test.py  run_eastr.py  utils.py  utils_test.py
tests/: align_hisat2.sh  build_bowtie2_index.sh  build_hisat_index.sh  get_fastq.sh  get_ref.sh  run_all.sh  run_eastr.sh  sra_list_arabidopsis.txt
tests/data/: ERR188044_chrX.bam  ERR188044_chrX.bam.bai  chrX.fa
tests/output/: ERR188044_chrX_junctions.tsv
vacuum/: .gitignore  CMakeLists.txt
vacuum/src/: GSam.cpp  GSam.h  tmerge.cpp  tmerge.h  utils.h  vacuum.cpp
