[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "EASTR"
version = "1.0.0"
description = "Tool for emending alignments of spuriously spliced transcript reads"
authors = [{name = "Ida Shinder", email = "ishinde1@jhmi.edu"}, {name = "Ida Shinder"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "biopython>=1.81,<2.0",
    "mappy>=2.26,<3.0",
    "numpy>=1.26.1,<1.27",
    "pandas>=2.1.2,<2.3",
    "pysam>=0.22.0,<0.23",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["EASTR"]

[project.urls]
GitHub = "https://github.com/ishinder/EASTR"

[project.scripts]
eastr = "EASTR.run_eastr:main"
